# PyTaiko

./: .gitignore  PyTaiko.py  README.md  config.toml  dan_creator.py  pyproject.toml  raylib_sdl-5.5.0.3-cp314-cp314-manylinux2014_x86_64.manylinux_2_17_x86_64.whl
.devin/: wiki.json
Graphics/: skin_config.json
docs/: tja_compat.csv
libs/: audio.py  background.py  chara_2d.py  config.py  file_navigator.py  global_data.py  global_objects.py  icon.icns  screen.py  song_hash.py  texture.py  tja.py  transition.py  utils.py  video.py
raylib-sdl/: raylib-5.5.0.3-cp312-cp312-macosx_10_13_x86_64.whl  raylib-5.5.0.3-cp312-cp312-macosx_11_0_arm64.whl  raylib-5.5.0.3-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  raylib-5.5.0.3-cp312-cp312-win_amd64.whl  raylib-5.5.0.3-cp313-cp313-macosx_10_13_x86_64.whl  raylib-5.5.0.3-cp313-cp313-macosx_11_0_arm64.whl  raylib-5.5.0.3-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  raylib-5.5.0.3-cp313-cp313-win_amd64.whl  raylib-5.5.0.3-cp314-cp314-macosx_10_15_x86_64.whl  raylib-5.5.0.3-cp314-cp314-macosx_11_0_arm64.whl  raylib-5.5.0.3-cp314-cp314-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  raylib-5.5.0.3-cp314-cp314-win_amd64.whl  raylib-5.5.0.3-pp311-pypy311_pp73-macosx_10_15_x86_64.whl  raylib-5.5.0.3-pp311-pypy311_pp73-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  raylib-5.5.0.3-pp311-pypy311_pp73-win_amd64.whl  raylib_drm-5.5.0.3-cp312-cp312-manylinux_2_24_x86_64.whl  raylib_drm-5.5.0.3-cp313-cp313-manylinux_2_24_x86_64.whl  raylib_drm-5.5.0.3-cp314-cp314-manylinux_2_24_x86_64.whl  (+16 more)
scenes/: dan_select.py  (+9 more)
(+124 files in other folders)
