[project]
name = "pytaiko"
version = "1.0"
description = "Taiko no Tatsujin simulator written in python and raylib"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.0.1",
    "raylib-sdl>=5.5.0.2",
    "tomlkit>=0.13.3",
]

[tool.vulture]
exclude = ["*.git", ".github/", ".venv/", "cache/"]
paths = ["."]

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
]
